--- a/cgi-bin/lang/en_US/categories.html
+++ b/cgi-bin/lang/en_US/categories.html
@@ -2,9 +2,8 @@
 Filter, destination or target groups if you prefer, are declared by: 
 </p>
 <pre>
-	- any combination of zero or one of each of: domains list, urls list and expressions list.
 	- an optional time constraint to the definition.
-	Note that test order is domainlist, urllist and expressionlist and relation between the three are OR.
+	- any combination of zero or one of each of: domains list, urls list and expressions list
 </pre>
 
 <p>
