Revert "Index note change 2"
This reverts commit 10f2321ad3ff5f6bcebfab793f789e2a70c7fe24.

--- a/cgi-bin/lang/en_US/index.html
+++ b/cgi-bin/lang/en_US/index.html
@@ -31,6 +31,5 @@
 		only if you have SquidClamav installed on your system.
 
 	<b>Restart Squid</b>
-		This link allows you to 'reconfigure' or quick-restart Squid to make it recognize the changes you made on SquidGuard and/or
-		SquidClamav configuration.
+		This link allows you to 'reconfigure' or quick-restart Squid to make it recognize SquidGuard and/or SquidClamav configuration changes you made.
 </pre>
