bledit.html change

--- a/cgi-bin/lang/en_US/bledit.html
+++ b/cgi-bin/lang/en_US/bledit.html
@@ -3,17 +3,17 @@ With the fields <b>Alias</b> and <b>Description</b> above, nickname and descript
 </p>
 <p>
 <b>Domains</b> : any string that can be found in the hostname part of the URL<br>
-<b>Urls</b> : any string that can be found in the hostname and URI part of the URL<br>
+<b>Urls</b> : any string that can be found in the hostname + URI part of the URL<br>
 <b>Expressions</b> : any regex pattern expression that can match an URL<br>
 </p>
 <p>
-This is a simple interface to add or remove entries in the blacklist files of a category or filter.                                              
+This is a simple interface to add or remove entries in the blacklist files of a category or filter.
 </p>
 <p>
-Just type your entries in the textarea for each type of blacklist and click on the <b>Remove</b> button if you want to remove it or click on the <b>Add</b> button to add them to the list.
+Just type your entries in the textarea for each type of blacklist and click on the <b>Remove</b> button if you want to remove it or <b>Add</b> button to add them to the list.
 </p>
 <p>
-You can add or remove multiple entries per type of list by typing them line by line in the textaera of the lists.
+You can add or remove multiple entries per list at a time by typing them line by line in the textarea.
 </p>
 <p>
 If you want to edit the list file directly, click on the <b>Edit</b> icon at the left of each textarea.
