Big change in Lists Management page
Almost thoroughly reformed show_blacklists. Its help content was revised
to reflect changes.

--- a/cgi-bin/lang/en_US/blacklists.html
+++ b/cgi-bin/lang/en_US/blacklists.html
@@ -1,27 +1,32 @@
 <p>
-Here are all the lists defined in the SquidGuard dbhome directory.
+This is a list of blocklist file groups found in the SquidGuard DBHOME directory.
+A group actually is a directory containing an each or none of domains, urls and
+expressions files.
 </p>
 <p>
-<b>Note that if you have created subdirectory in this dbhome directory to subclassify your blocklists, SquidGuard Manager will not work and may corrupt your squidguard.conf file!</b>
+<b>Note that if you have created subdirectories under those directories, to subclassify
+your blocklists for example, SquidGuard Manager will not work and may corrupt your
+squidguard.conf file!</b><br />
+<b>Note also that if you have defined symbolic links into that directory SquidGuard
+Manager will not work and they will not be displayed here properly.</b>
 </p>
 <p>
-<b>Note also that if you have defined symbolic links into that directory SquidGuard Manager will not work and they will not be displyed here</b>
-</p>
-<p>
-By clicking on a list name you will be allowed to add/remove entries from
-the domain, url and expression files of this list. You will also have a link
-to edit directly those files.
+To start editing a group of files, click on the Edit icon of your choice.
+There you can add/remove entries to/from them. You can also give an alias name
+and descriptive notes to the group.
 </p>
 <p>
 The <b>Rebuild all databases</b> button allows you to reconstruct all Berkeley
-database of the whole lists. It's just like running a "<i>squidguard -C all</i>"
-</p>
-<p>
-Some time it is difficult to know where a blacklisted domain or url is stored. Use the search form to know in witch list it appears. 
+database of all the lists. It's just like running a "<i>squidguard -C all</i>".
 </p>
 <p>
 To add a new list, click on the <b>Create a list</b> button and give it a name.
-The name must only use alphanumeric, dash '-' and underscore '_' characters.
+The name must only consist of alphanumeric, dash '-' and underscore '_' characters.
 </p>
-<p>To delete a list, just click on the icon attached to each list name.
+<p>To delete a whole list directory, click on the rightmost Trash icon of the row.
+Then you will be prompted before actual deletion takes place.
+</p>
+<p>
+Sometimes it is difficult to know where a blacklisted domain or url is stored.
+Use the Search form to know in witch list it is. 
 </p>
