Fix some translation issues. Thanks to Travis L. Bean for the patch.

--- a/cgi-bin/lang/en_US/blacklists.html
+++ b/cgi-bin/lang/en_US/blacklists.html
@@ -1,14 +1,14 @@
 <p>
 This is a list of blocklist file groups found in the SquidGuard DBHOME directory.
-A group actually is a directory containing an each or none of domains, urls and
+A group actually is a directory containing an each or none of domains, URLs and
 expressions files.
 </p>
 <p>
 <b>Note that if you have created subdirectories under those directories, to subclassify
 your blocklists for example, SquidGuard Manager will not work and may corrupt your
 squidguard.conf file!</b><br />
-<b>Note also that if you have defined symbolic links into that directory SquidGuard
-Manager will not work and they will not be displayed here properly.</b>
+<b>Note also that if you have defined symbolic links into that directory, SquidGuard
+Manager will not work, and they will not be displayed here properly.</b>
 </p>
 <p>
 To start editing a group of files, click on the Edit icon of your choice.
@@ -27,6 +27,6 @@ The name must only consist of alphanumeric, dash '-' and underscore '_' characte
 Then you will be prompted before actual deletion takes place.
 </p>
 <p>
-Sometimes it is difficult to know where a blacklisted domain or url is stored.
+Sometimes it is difficult to know where a blacklisted domain or URL is stored.
 Use the Search form to know in witch list it is. 
 </p>
