--- a/cgi-bin/lang/en_US/bledit.html
+++ b/cgi-bin/lang/en_US/bledit.html
@@ -2,15 +2,15 @@
 With the fields <b>Alias</b> and <b>Description</b> above, nickname and description can be tagged to the blacklist. This is solely for GUI comprehensibility and doesn't make any changes to SquidGuard configuration.
 </p>
 <p>
-<b>Domains</b> : any string that can be found in the hostname part of the URL<br>
-<b>Urls</b> : any string that can be found in the hostname + URI part of the URL<br>
-<b>Expressions</b> : any regex pattern expression that can match an URL<br>
+<b>Domains</b>: any string that can be found in the hostname part of the URL.<br>
+<b>URLs</b>: any string that can be found in the hostname + URI part of the URL.<br>
+<b>Expressions</b>: any regex pattern expression that can match a URL.<br>
 </p>
 <p>
 This is a simple interface to add or remove entries in the blacklist files of a category or filter.
 </p>
 <p>
-Just type your entries in the textarea for each type of blacklist and click on the <b>Remove</b> button if you want to remove it or <b>Add</b> button to add them to the list.
+Just type your entries in the textarea for each type of blacklist, click on the <b>Remove</b> button if you want to remove it, or click on the <b>Add</b> button to add them to the list.
 </p>
 <p>
 You can add or remove multiple entries per list at a time by typing them line by line in the textarea.
