--- a/cgi-bin/lang/en_US/categories.html
+++ b/cgi-bin/lang/en_US/categories.html
@@ -1,8 +1,8 @@
 <p>
-Filter, destination or target groups if you prefer, are declared by: 
+Filter, destination, or target groups if you prefer, are declared by: 
 </p>
 <pre>
-	- any combination of zero or one of each of: domains list, urls list and expressions list.
+	- any combination of zero, or one of each of: domains list, URLs list and expressions list.
 	- an optional time constraint to the definition.
 	Note that test order is domainlist, urllist and expressionlist and relation between the three are OR.
 </pre>
@@ -12,30 +12,30 @@ Time constraints on destination groups can be used to make these groups ignored 
 </p>
 
 <p>
-You can set for each destination group a redirect url that will be used when a client request is found in a domain, url or expression list. The redirect Url declares the altenative URL to be used for blocked destination groups.
+You can set for each destination group a redirect URL that will be used when a client request is found in a domain, URL, or expression list. The redirect URL declares the altenative URL to be used for blocked destination groups.
 </p>
-<p>SquidGuard can do runtime string substitutions in the redirectors. Therefor the character "%" has special meaning in the redirector URLs: 
+<p>SquidGuard can do runtime string substitutions in the redirectors. Therefore, the character "%" has special meaning in the redirector URLs: 
 </p>
 <pre>
 	%a	is replaced with IP address of the client.
-	%n	is replaced with the domainname of the client or "unknown" if not available.
-	%i	is replaced with the user ID (RFC931) or "unknown" if not available.
-	%s	is replaced with the matched source group (client group) or "unknown" if no groups were matched.
-	%t	is replaced with the matched destination group (filter) or "unknown" if no groups were matched.
+	%n	is replaced with the domainname of the client, or "unknown" if not available.
+	%i	is replaced with the user ID (RFC931), or "unknown" if not available.
+	%s	is replaced with the matched source group (client group), or "unknown" if no groups were matched.
+	%t	is replaced with the matched destination group (filter), or "unknown" if no groups were matched.
 	%u	is replaced with the requested URL.
 	%p	is replaced with the REQUEST_URI, i.e. the path and the optional query string of %u, but note for convenience without the leading "/".
 	%%	is replaced with a single "%".
 </pre>
 <p>
-Thus you can pass usefull information to a more or less intelligent CGI page:
+Thus you can pass useful information to a more or less intelligent CGI page:
 </p>
 <pre>
 	http://proxy/cgi/squidGuard?clientaddr=%a&clientname=%n&clientident=%i&clientgroup=%s&destinationgroup=%t&url=%u
 </pre>   
 
 <p>
-The Log to file input box allows you to specify where redirects caused by match of this group should be logged. The value is either a path relative to logdir or an absolute path (i.e. /full/path) to a logfile
+The Log to file input box allows you to specify where redirects caused by match of this group should be logged. The value is either a path relative to logdir, or an absolute path (i.e. /full/path) to a logfile.
 </p>
 <p>
-If the anonymized option is specified the logged info is somewhat anonymized to protect individuals.
+If the anonymized option is specified, the logged info is somewhat anonymized to protect individuals.
 </p>
