--- a/cgi-bin/lang/en_US/globals.html
+++ b/cgi-bin/lang/en_US/globals.html
@@ -2,7 +2,7 @@
 
 <h4>Log directory:</h4>
 <pre>
-	This mandatory parameter is used to define the full path where log
+	This mandatory parameter is used to define the full path where logi
 	files will be written.
 	By default: /usr/local/squidGuard/logs
 </pre>
@@ -16,16 +16,16 @@
 
 <h4>MySQL Database:</h4>
 <pre>
-	If you have a SquidGuard version above or equal to 1.4 you can use a
-	mySQL database to find users into a source definition. If you plan to
+	If you have a SquidGuard version above or equal to 1.4, you can use a
+	mySQL database to find users in a source definition. If you plan to
 	do that, use the settings in the "Retrieving users from MySQL" part to
 	set the database connection parameters.
 </pre>
 
 <h4>LDAP Database:</h4>
 <pre>
-	If you have a SquidGuard version above or equal to 1.5 you can use a
-	LDAP database to find users into a source definition. If you plan to
+	If you have a SquidGuard version above or equal to 1.5, you can use a
+	LDAP database to find users in a source definition. If you plan to
 	do that, use the settings in the "Retrieving users from LDAP" part to
 	set the LDAP connection parameters.
 
