--- a/cgi-bin/lang/en_US/index.html
+++ b/cgi-bin/lang/en_US/index.html
@@ -6,14 +6,14 @@
 		This menu allows you to define scheduled time to be used in other SquidGuard objects (Sources, URL Rewrites, Filters and ACLs).
 
 	<b>Sources:</b>
-		Use this menu to define sources like users, groups, Ip addresses, range of Ip addresses or networks to apply policies on.
+		Use this menu to define sources like users, groups, IP addresses, range of IP addresses, or networks to apply policies on.
 
-	<b>Url rewriting:</b>
+	<b>URL rewriting:</b>
 		This menu allows you to define URL rewriting groups, each consists of one or more <i>Sed</i> style substitution rules. They can be
 		applied to source groups in <b>ACLs</b> menu.
 
 	<b>Filters:</b>
-		Destination Groups filter selector. In this menu you can shape each group by selecting a list for domain, url or regexp filter
+		Destination Groups filter selector. In this menu you can shape each group by selecting a list for domain, URLs, or regular expressions filter
 		from those you defined in <b>Manage Lists</b> memu.
 
 	<b>ACLs:</b>
