--- a/cgi-bin/lang/en_US/sc_index.html
+++ b/cgi-bin/lang/en_US/sc_index.html
@@ -6,13 +6,13 @@
 		This menu allows you to deactivate virus scan based on regex pattern on the URL or Content-Type.
 
 	<b>Whitelists:</b>
-		Use this menu to define which domain name or site hostname to whitelist, i-e there will be no virus scan nor call to SquidGuard on these site.
+		Use this menu to define which domain name or site hostname to whitelist, i.e. there will be no virus scan nor call to SquidGuard on these sites.
 
 	<b>Trusted Users:</b>
 		Use this menu to define which users (RFC-931 usernames) will be excluded from virus scan and SquidGuard blocklists.
 
 	<b>Trusted Clients:</b>
-		Use this menu to define which client hostnames or ip addresses will be excluded from virus scan and SquidGuard blocklists.
+		Use this menu to define which client hostnames or IP addresses will be excluded from virus scan and SquidGuard blocklists.
 
 	<b>View Configuration:</b>
 		This menu allows you to see the SquidClamav configuration file.
@@ -20,6 +20,6 @@
 	<b>View log:</b>
 		This menu allows you to consult the SquidClamav log file.
 
-	<b>Close</b>
+	<b>Close:</b>
 		Use this to close the SquidClamav Manager window.
 </pre>
