--- a/cgi-bin/lang/en_US/sc_whitelists.html
+++ b/cgi-bin/lang/en_US/sc_whitelists.html
@@ -1,5 +1,5 @@
 <p>
-The whitelist definition allows you to disable chained program and virus scan at URL level. When the given pattern matches the URL SquidClamav fallbacks to Squid instantly.
+The whitelist definition allows you to disable chained program and virus scan at URL level. When the given pattern matches the URL, SquidClamav fallbacks to Squid instantly.
 </p>
 <p>
 For example:
@@ -8,5 +8,5 @@ For example:
 	\.clamav\.net
 </pre>
 <p>
-will deliver any files from hosts on clamav.net domain directly without virus scanning nor chack against SquidGuard blocklists.
+will deliver any files from hosts on clamav.net domain directly without virus scanning or check against SquidGuard blocklists.
 </p>
