--- a/cgi-bin/lang/fr_FR/blacklists.html
+++ b/cgi-bin/lang/fr_FR/blacklists.html
@@ -9,7 +9,7 @@ Ici sont affichés toutes les listes définies dans le répertoire dbhome de SquidG
 SquidGuard Manager ne fonctionnera pas correctement et ils seront pas affichés ici.</b>
 </p>
 <p>
-En cliquant sur le nom d'une liste vous aurez la possibilité d'ajouter/supprimer des entrées dans les fichiers de liste de domaines, d'urls et d'expressions.
+En cliquant sur le nom d'une liste vous aurez la possibilité d'ajouter/supprimer des entrées dans les fichiers de liste de domaines, d'URLs et d'expressions.
 Un lien est aussi a disposition pour éditer directement ces fichiers.
 </p>
 <p>
