--- a/cgi-bin/lang/fr_FR/bledit.html
+++ b/cgi-bin/lang/fr_FR/bledit.html
@@ -1,7 +1,7 @@
 <p>Les champs <b>Alias</b> et <b>Description</b> ci-dessus peuvent être utilisé pour traduire et  décrire les différentes listes pour une meilleur compréhension de l'interface utilisateur.</p>
 <p>
 <b>Domaines</b> : n'importe quelle chaine de charactere qui peut etre trouvée dans la partie 'hostname' de l'URL<br>
-<b>Urls</b> : n'importe quelle chaine de charactere qui peut etre trouvée dans la partie 'hostname' et URI de l'URL<br>
+<b>URLs</b> : n'importe quelle chaine de charactere qui peut etre trouvée dans la partie 'hostname' et URI de l'URL<br>
 <b>Expressions</b> : n'importe quelle expression regex dont le pattern peut s'appliqué à une URL<br>
 </p>
 
