--- a/cgi-bin/lang/fr_FR/index.html
+++ b/cgi-bin/lang/fr_FR/index.html
@@ -12,7 +12,7 @@
 		Permet la definition de règles de reécriture des URLs qui seront appliquées par SquidGuard lorsque des expressions seront trouvées.
 
 	<b>Filtres:</b>
-		Ce menu permet de définir des groupes d'URL de destination basés sur des listes prédéfinies de domain, url ou expressions régulières.
+		Ce menu permet de définir des groupes d'URL de destination basés sur des listes prédéfinies de domain, URL ou expressions régulières.
 
 	<b>Polices:</b>
 		Menu principal par lequel sont définis les règles d'accès à appliquer en fonction des objets sources et en fonction des filtres sur les destinations.
