--- a/cgi-bin/lang/fr_FR/schedules.html
+++ b/cgi-bin/lang/fr_FR/schedules.html
@@ -4,7 +4,7 @@ par jours de la semaine ou dates avec une contrainte horaire optionnelle qui
 s'appliquera à chaque définition de jour de la semaine ou de date.
 </p>
 <p>Chaque zone de temps créée pourra être utilisée ultérieurement pour definir
-des contraintes temporelles aux différents objets comme les sources, les reécriture d'Url et les filtres.
+des contraintes temporelles aux différents objets comme les sources, les reécriture d'URL et les filtres.
 </p>
 <p>
 Le recouvrement de dates/heures entre les différentes éléments d'une règle definie sont permis et résulterons en une union.
