--- a/cgi-bin/lang/en_US/acl.html
+++ b/cgi-bin/lang/en_US/acl.html
@@ -1,17 +1,17 @@
 <p>
-The Access Control List, ACL, allows you to combine the previous object definitions into distinct rulesets for each source (client group) or in a default ACL.
+The Access Control List (ACL) allows you to combine the previous object definitions into distinct rulesets for each source (client group) or in a default ACL.
 </p>
 
 <p>
-The default section defines fallbacks for all acl rulesets. Thus if you define a rewrite rule here it will be used in acls where there are no rewrite rules defined. (i.e. the other acls inherit the definitions in the default acl optionally overruled by own definitions). The default rule set is used for all clients that match no sources (client group) and for client groups (sources) with no acls declared.
+The default section defines fallbacks for all ACL rulesets. Thus, if you define a rewrite rule here, it will be used in ACLs where there are no rewrite rules defined (i.e. the other ACLs inherit the definitions in the default ACL, optionally overruled by their own definitions). The default rule set is used for all clients that match no sources (client group) and for client groups (sources) with no ACLs declared.
 </p>
 
 <p>
-The <b>Deny ip addresses in Urls</b> can be used to enforce the use of domainnames over IP addresses in the host part of URLs.
+The <b>Deny ip addresses in URLs</b> can be used to enforce the use of domainnames over IP addresses in the host part of URLs.
 </p>
 
 <p>
-The <b>Default access</b> allows you to choose the default behaviour of the acl. <b>Only the selected list (none)</b> should be used to terminate pass rules where only the listed destination groups should pass. <b>All Internet (all | any)</b> is the default and be used to allow full access to Internet provided that the destination is not found in the blacklist groups.
+The <b>Default access</b> allows you to choose the default behaviour of the ACL. <b>Only the selected list (none)</b> should be used to terminate pass rules where only the listed destination groups should pass. <b>All Internet (all | any)</b> is the default and used to allow full access to Internet, providing that the destination is not found in the blacklist groups.
 </p>
 
 <p>
@@ -19,25 +19,25 @@ The <b>Default access</b> allows you to choose the default behaviour of the acl.
 </p>
 
 <p>
-<b>Deny access to</b> must be used to define blacklist groups that should not pass (i.e. be redirected to the actual redirect URL). That means that there must also be a redirect definition for eiter that destination group, the actual acl or the default acl.
+<b>Deny access to</b> must be used to define blacklist groups that should not pass (i.e. be redirected to the actual redirect URL). This means there must also be a redirect definition for either the destination group, the actual ACL, or the default ACL.
 </p>
 
 <p>
-The <b>DNS Whitelist</b> allows you to use a set of Internet DNS blacklist engine to allow destinations for the actual acl.
+The <b>DNS Whitelist</b> allows you to use a set of Internet DNS blacklist engines to allow destinations for the actual ACL.
 </p>
 
 <p>
-The <b>DNS Blacklist</b> allows you to use a set of Internet DNS blacklist engine to block destinations for the actual acl.
+The <b>DNS Blacklist</b> allows you to use a set of Internet DNS blacklist engines to block destinations for the actual ACL.
 </p>
 
 <p>
-The <b>Use rewrite rules</b> allows you to declare the substitution rulsets that apply to the actual acl.
+The <b>Use rewrite rules</b> allows you to declare the substitution rulsets that apply to the actual ACL.
 </p>
 
 <p>
-The <b>Redirect url</b> declares the altenative URL to be used for blocked destination groups for the actual acl.
+The <b>Redirect URL</b> declares the alternative URL to be used for blocked destination groups for the actual ACL.
 </p>
 
 <p>
-The <b>else</b> part of the acl can be used only if you have defined a time constraint to the acl.
+The <b>else</b> part of the ACL can be used only if you defined a time constraint for the ACL.
 </p>
