--- a/cgi-bin/lang/en_US/sc_aborts.html
+++ b/cgi-bin/lang/en_US/sc_aborts.html
@@ -1,8 +1,8 @@
 <p>
-By default SquidClamav scan all HTTP stream.
+By default SquidClamav scans all HTTP streams.
 </p>
 <p>
-Add here your exceptions for virus scanning, i-e any regular expression a la grep typed here that must abort virus scanning when found in a client URL request or in the Content-Type HTTP header.
+Add your exceptions for virus scanning here, i.e any regular expression typed here that must abort virus scanning when found in a client URL request or in the Content-Type HTTP header.
 </p>
 <p>
 Any special character must be escaped with a backslash.
@@ -19,5 +19,5 @@ To abort scanning on content-type matching the following patterns:
 	^text\/.*$
 </pre>
 <p>
-If there's no rules defined, SquidClamav Manager allow you to automatically add rules to gain the maximum speed for Squid. Click on the button <b>Optimize for speed</b>.
+If there is no rules defined, SquidClamav Manager allow you to automatically add rules to gain the maximum speed for Squid. Click on the button <b>Optimize for speed</b>.
 </p>
