--- a/cgi-bin/lang/en_US/sources.html
+++ b/cgi-bin/lang/en_US/sources.html
@@ -14,14 +14,14 @@ where:
 
 <h4>File of IP address/range list:</h4>
 <pre>
-    The value must be a single filename. Where filename is either a path relative to dbhome or an absolute path to a database file.
+    The value must be a single filename. Where filename is either a path relative to dbhome, or an absolute path to a database file.
      The file format is simply addresses and/or networks separated by a newline as above.
 </pre>
 
 <h4>Search Ip in LDAP:</h4>
 <pre>
-    Used to define a ldap query in order to extract an Ip address from an LDAP server (or an Active Directory). 
-    Use '%s' to reference the ip in your LDAP URL.
+    Used to define a ldap query in order to extract an Ip address from a LDAP server (or an Active Directory). 
+    Use '%s' to reference the IP in your LDAP URL.
 
 Example:
     ldap://ldap.example.com/ou=internetcomputers,dc=example,dc=com?iphostnumber?sub?(&(objectclass=iphost)(iphostnumber=%s))
@@ -41,19 +41,19 @@ where:
     user1 [...]
 
 where:
-    user1 is a username. This mean that the users must be authenticated by squid first to make this work.
+    user1 is a username. This mean that the users must be authenticated by Squid first to make this work.
 </pre>
 
 <h4>File of users list (single):</h4>
 <pre>
-    The value must be a single filename, where the filename is either a path relative to dbhome or an absolute path to a database file.
+    The value must be a single filename, where the filename is either a path relative to dbhome, or an absolute path to a database file.
     The file format is simply RFC-931 usernames optionally followed by a `:' and a comment (i.e. /etc/passwd or a .htpasswd file may be used)
     separated by a newline as in the user declaration.
 </pre>
 
 <h4>Search Users in LDAP:</h4>
 <pre>
-    Used to define a ldap query in order to extract a user name from an LDAP server (or an Active Directory).
+    Used to define a ldap query in order to extract a user name from a LDAP server (or an Active Directory).
     Use '%s' to reference the username in your LDAP URL.
 
 example:
@@ -63,22 +63,22 @@ example:
 
 <h4>Search Users in MySQL database:</h4>
 <pre>
-    Used to define a select statement to retreive a username from a mysql database. 
+    Used to define a select statement to retreive a username from a MySQL database. 
 
 Example:
-    select login from pusers
+    select login from t_users
 
     Attention: The query must not be ended by a trailing ";" and must not contain more than four statements.
-    Additionally keep in mind, that the name "user" is already used as a token by squidGuard. Don't use it in your query.
+    Additionally keep in mind, the name "user" is already used as a token by SquidGuard. Don't use it in your query.
 </pre>
 
 <h4>Program returning user list:</h4>
 <pre>
     Used to specify a command that will return a list of usernames onto stdout.
     The value must be an absolute path to an executable program. This program must be executable
-    by the user running squidGuard (most of the time 'squid').
+    by the user running SquidGuard (most of the time 'squid').
 </pre>
 
 <p>
-Time constraints on source groups can be used to make these groups functional within or outside a given time space only;
+Time constraints on source groups can be used to make these groups functional within or outside a given time space only.
 </p>
